bin/tests/errors/sema/sema_err_invalid_countof_type.swg
#global fileprivate

#assert(@countof(true) == 1) // swc-expected-error {{sema_err_invalid_countof_type}}
